# audio_project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  style.qss
docs/: AudioEffect_8h_source.html  BeatVisualizerWidget_8h_source.html  ChordAudioEngine_8h_source.html  ChordChange_8h_source.html  ChordNames_8h_source.html  ChordProgressionManager_8h_source.html  ChordProgressionWidget_8h_source.html  ChordProgression_8cpp.html  ChordProgression_8cpp__incl.map  ChordProgression_8cpp__incl.md5  ChordProgression_8h_source.html  ChordTrackWidget_8h_source.html  Chorus_8h_source.html  ColorLegendsWith_8h_source.html  Compressor_8h_source.html  Delay_8h_source.html  Distortion_8h_source.html  EQ_8h_source.html  EffectsWindow_8h_source.html  FXChainWidget_8h_source.html  FXChain_8h_source.html  Flanger_8h_source.html  GainReductionMeter_8h_source.html  Gate_8h_source.html  GuitarChordShape_8h_source.html  GuitarChordShapes_8h_source.html  GuitarFretboardWidget_8h_source.html  GuitarSynth_8h_source.html  HorizontalFretboardWidget_8h_source.html  Limiter_8h_source.html  MainWindow_8h_source.html  Metronome_8cpp.html  Metronome_8cpp__incl.map  Metronome_8cpp__incl.md5  Metronome_8h_source.html  NoteColorUtils_8h_source.html  NoteMapFretboardWidget_8h_source.html  NoteMapUtils_8h_source.html  Phaser_8h_source.html  Reverb_8h_source.html  (+232 more)
docs/html/: ChordAudioEngine_8h_source.html  ChordProgression_8h_source.html  ColorLegendsWith_8h_source.html  Delay_8h_source.html  EQ_8h_source.html  FXChain_8h_source.html  GuitarChordShapeTest_8h_source.html  Limiter_8h_source.html  Metronome_8h_source.html  Phaser_8h_source.html  classAudioEffect__inherit__graph.md5  classBeatVisualizerWidget__inherit__graph.map  classBeatVisualizerWidget__inherit__graph.md5  classChordAudioEngine-members.html  classChordProgressionManager.html  classChordProgressionWidget.html  classChordProgressionWidget__inherit__graph.md5  classChordTrackWidget-members.html  classChordTrackWidget__inherit__graph.map  classCompressor__inherit__graph.map  classDelay__inherit__graph.map  classDelay__inherit__graph.md5  classDistortion.html  classGate.html  (+51 more)
html/: Compressor_8h_source.html  GuitarFretboardWidget_8h_source.html  GuitarSynth_8h_source.html  NoteMapFretboardWidget_8h_source.html  ScaleDefinitions_8h_source.html  SpectrumAnalyzerWidget_8h_source.html  StrummingPattern_8h_source.html  Tremolo_8h_source.html  classAudioEffect-members.html  classChordAudioEngine.html  classChordProgression-members.html  classChordProgressionWidget-members.html  classChorus.html  classChorus__coll__graph.md5  classColorLegendsWith-members.html  classColorLegendsWith.html  classDistortion-members.html  classEQ__inherit__graph.map  classFXChain-members.html  classFXChainWidget.html  classFlanger-members.html  classFlanger.html  classGate__coll__graph.md5  classGuitarFretboardWidget__inherit__graph.map  classGuitarSynth.html  classHorizontalFretboardWidget-members.html  classHorizontalFretboardWidget__coll__graph.map  classHorizontalFretboardWidget__inherit__graph.md5  classLimiter.html  classLimiter__coll__graph.map  classMetronomeWindow-members.html  classMetronomeWindow__coll__graph.md5  classMetronomeWindow__inherit__graph.map  classNoteMapFretboardWidget-members.html  classNoteMapFretboardWidget.html  classPhaser-members.html  classPhaser__inherit__graph.map  classReverb.html  classTestMetronomeVisualWindow__inherit__graph.map  classTremolo.html  (+32 more)
include/: ChordAudioEngine.h  ChordChange.h  ChordNames.h  ChordProgression.h  ChordProgressionManager.h  GuitarChordShape.h  GuitarSynth.h  Metronome.h  NoteMap.h  README.md
latex/: classAudioEffect.tex  classAudioEffect__inherit__graph.md5  classBeatVisualizerWidget.tex  classBeatVisualizerWindow.tex  classBeatVisualizerWindow__inherit__graph.md5  classChordProgressionWidget.tex  classChordTrackWidget.tex  classChorus__inherit__graph.md5  classColorLegendsWith.tex  classColorLegendsWith__coll__graph.md5  classDistortion__coll__graph.md5  classEffectsWindow.tex  classEffectsWindow__inherit__graph.md5  classFXChainWidget.tex  classGainReductionMeter.tex  classGuitarFretboardWidget.tex  classGuitarFretboardWidget__inherit__graph.md5  classGuitarSynth.tex  classHorizontalFretboardWidget.tex  classMainWindow.tex  classMetronomeWindow__coll__graph.md5  classNoteMapFretboardWidget.tex  classPhaser__coll__graph.md5  classReverb.tex  classSpectrumAnalyzerWidget.tex  classSpectrumAnalyzerWidget__inherit__graph.md5  classTremolo.tex  structStrummingPattern.tex  structqt__meta__stringdata__BeatVisualizerWidget__t.tex  structqt__meta__stringdata__ChordProgressionWidget__t.tex  structqt__meta__stringdata__ChordTrackWidget__t.tex  structqt__meta__stringdata__EffectsWindow__t.tex  structqt__meta__stringdata__FXChainWidget__t.tex  structqt__meta__stringdata__GainReductionMeter__t.tex
src/: ChordAudioEngine.cpp  ChordProgression.cpp  ChordProgressionManager.cpp  GuitarSynth.cpp  Metronome.cpp  README.md  main.cpp
strumming/: StrummingPattern.cpp  StrummingPattern.h
tests/: GuitarChordShapeTest.h  README.md  test_chord_shape_to_freq.cpp  test_chord_strong_beat.cpp  test_chord_strumming.cpp  test_fretboard.cpp  test_horizontal_fretboard.cpp  test_metronome_beats.cpp  test_metronome_visual.cpp  test_note_map.cpp  test_open_string_freqs.cpp
utils/: GuitarChordShapes.h  NoteColorUtils.h  NoteMapUtils.cpp  NoteMapUtils.h  README.md  ScaleDefinitions.cpp  ScaleDefinitions.h  ScaleUtils.h  fft.h
widgets/: BeatVisualizerWidget.cpp  BeatVisualizerWidget.h  ChordProgressionWidget.cpp  ChordProgressionWidget.h  ChordTrackWidget.cpp  ChordTrackWidget.h  ColorLegendsWith.cpp  ColorLegendsWith.h  EffectsWindow.cpp  EffectsWindow.h  FXChainWidget.cpp  FXChainWidget.h  GainReductionMeter.cpp  GainReductionMeter.h  GuitarFretboardWidget.cpp  GuitarFretboardWidget.h  HorizontalFretboardWidget.cpp  HorizontalFretboardWidget.h  MainWindow.cpp  MainWindow.h  NoteMapFretboardWidget.cpp  NoteMapFretboardWidget.h  README.md  SpectrumAnalyzerWidget.cpp  SpectrumAnalyzerWidget.h  SynthSettingsWindow.cpp  SynthSettingsWindow.h
(+209 files in other folders)
